# energy_advisor

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  hacs.json  pyproject.toml
.homeassistant/: configuration.yaml
custom_components/energy_advisor/: __init__.py  config.py  config_flow.py  const.py  coordinator.py  manager.py  manifest.json  models.py  planner.py  price.py  sensor.py  storage.py  util.py
custom_components/energy_advisor/translations/: en.json
docs/: ARCHITECTURE.md  HACS_TESTING.md
scripts/: build_release.sh  install_hacs.sh  install_nordpool.sh  run_tests.sh
tests/: test_config_flow.py  test_coordinator.py  test_init.py  test_options_flow.py  test_planner.py  test_price.py  test_sensor.py
