[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-advisor-dev"
version = "0.1.0"
description = "Development tooling for the Energy Advisor Home Assistant integration"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "trappify", email = "andreas@trappland.se"}]
dependencies = [
  "homeassistant>=2024.12.0",
]
optional-dependencies.dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-homeassistant-custom-component>=0.13",
  "pytest-cov>=5.0",
  "pytest-dotenv>=0.5",
  "ruff>=0.4",
]

[tool.pytest.ini_options]
addopts = "-ra --cov=custom_components.energy_advisor --cov-report=term-missing"
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = [
  "E203",
]

[tool.ruff.isort]
known-first-party = ["custom_components.energy_advisor"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
